manifests/manifests/auto-operation/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auto-operation
  namespace: plarail2021
spec:
  selector:
    matchLabels:
      app: auto-operation
  template:
    metadata:
      labels:
        app: auto-operation
    spec:
      containers:
        - name: soft-backend-auto-operation
          image: ghcr.io/ueckoken/plarail2022-auto-operation:10a02b0-1668823810 # {"$imagepolicy": "plarail2021:auto-operation"}
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
