manifests/manifests/auto-operation/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auto-operation
  namespace: plarail2021
  labels:
    app: auto-operation
spec:
  type: ClusterIP
  selector:
    app: auto-operation
  ports:
    - name: grpc-for-auto-operation
      port: 6543
