manifests/manifests/auto-operation/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auto-operation-nginx
  namespace: plarail2021
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
    - host: operate.chofufes2022.ueckoken.club
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auto-operation
                port:
                  number: 8080
  tls:
    - hosts:
        - *.chofufes2022.ueckoken.club
        - chofufes2022.ueckoken.club
      secretName: letsencrypt-prod
