manifests/manifests/auto-operation/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: auto-operation
  namespace: plarail2021
spec:
  routes:
    - kind: Rule
      match: Host(`operate.chofufes2022.ueckoken.club`)
      services:
        - name: auto-operation
          port: 6543
  tls:
    secretName: cloudflare-cert
